--- a/blogroll.html
+++ b/blogroll.html
@@ -5,11 +5,11 @@ permalink: /blogroll/
 ---
 <!--specially for classification page-->
 <br />
-<h1 ><font size="12" face="KaiTi">友情链接</font></h1>
+<h3><font size="6" face="KaiTi"><b>友情链接</font></h3>
 <br />
 
-<h3>实验室非计算机专业的学姐的技术博客：<a href="http://doufunao.github.io/" target="_blank">http://doufunao.github.io</a></h3>
-<h3>实验室大神学长的自然语言处理工具：<a href="http://www.milk.cat/" target="_blank">http://www.milk.cat</a></h3>
-<h3>北科帅哥的技术博客：<a href="http://2012choice.blogspot.jp/" target="_blank">http://2012choice.blogspot.jp</a></h3>
+<h4>实验室非计算机专业的学姐的技术博客：<a href="http://lilei.science/" target="_blank">http://lilei.science</a></h4>
+<h4>实验室大神学长的自然语言处理工具：<a href="http://www.milk.cat/" target="_blank">http://www.milk.cat</a></h4>
+<h4>北科帅哥的技术博客：<a href="http://2012choice.blogspot.jp/" target="_blank">http://2012choice.blogspot.jp</a></h4>
 <br />
 
