--- a/blogroll.html
+++ b/blogroll.html
@@ -4,6 +4,8 @@ title: "普-友情链接"
 permalink: /blogroll/
 ---
 <!--specially for classification page-->
+
+<div class="blogroll">
 <br />
 <h3><font size="6" face="KaiTi"><b>友情链接</font></h3>
 <br />
@@ -12,4 +14,6 @@ permalink: /blogroll/
 <h4>实验室大神学长的自然语言处理工具：<a href="http://www.milk.cat/" target="_blank">http://www.milk.cat</a></h4>
 <h4>北科帅哥的技术博客：<a href="http://2012choice.blogspot.jp/" target="_blank">http://2012choice.blogspot.jp</a></h4>
 <br />
+</div>
+
 
