--- a/catalogue.html
+++ b/catalogue.html
@@ -7,7 +7,7 @@ permalink: /catalogue/
 <br />
 <br />
 <div class="row">
-<div class="col-sm-5 col-sm-offset-0">
+<div class="col-sm-5 col-sm-offset-0 catalogue">
   <h1><strong><font face="STKaiti" color="black">目录</font></strong></h1>
   <div class="categories">
     {% for ca in site.categories %}
