--- a/publications/index.html
+++ b/publications/index.html
@@ -10,7 +10,7 @@
 
   
     
-    <meta name="description" content="Dependency-Aware Neural Topic Model Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. Information Processing &amp; Management. 2024 Improving Word-level Diversity in Neural Machine Translation by Controlling the Effects of Word Frequency Xuewen Shi, Ping Jian, Yi-Kun Tang, Heyan Huang. Proceedings of the 22nd Chinese National Conference on Computational Linguistics. 2023 Approximating to the Real Translation Quality for Neural Machine Translation via Causal Motivated Methods Xuewen Shi, Heyan Huang, Ping Jian, Yi-Kun Tang.">
+    <meta name="description" content="Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. The Web Conference (WWW). 2024 Dependency-Aware Neural Topic Model Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. Information Processing &amp; Management. 2024 Improving Word-level Diversity in Neural Machine Translation by Controlling the Effects of Word Frequency Xuewen Shi, Ping Jian, Yi-Kun Tang, Heyan Huang. Proceedings of the 22nd Chinese National Conference on Computational Linguistics.">
   
 
   <link rel="apple-touch-icon" sizes="180x180" href="https://example.com/apple-touch-icon.png">
@@ -275,6 +275,10 @@ Hugo is the **world’s fastest framework for building websites**. It is written
 
 It makes use of a variety of open source projects including: -->
 <ol>
+<li><a href="" target="_blank">Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling</a><br/>
+<small><small>
+Heyan Huang, Yi-Kun Tang, <strong>Xuewen Shi</strong>, Xian-Ling Mao. <em>The Web Conference (WWW)</em>. 2024
+</small></small></li>
 <li><a href="https://www.sciencedirect.com/science/article/pii/S0306457323002674" target="_blank">Dependency-Aware Neural Topic Model</a><br/>
 <small><small>
 Heyan Huang, Yi-Kun Tang, <strong>Xuewen Shi</strong>, Xian-Ling Mao. <em>Information Processing &amp; Management</em>. 2024
