--- a/publications-zh/index.html
+++ b/publications-zh/index.html
@@ -10,7 +10,7 @@
 
   
     
-    <meta name="description" content="Dependency-Aware Neural Topic Model Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. Information Processing &amp; Management. 2024 基于词频效应控制的神经机器翻译用词多样性增强方法 史学文, 鉴萍, 唐翼琨, 黄河燕. 第22届中国计算语言学大会 (CCL 2023). 2023 Approximating to the Real Translation Quality for Neural Machine Translation via Causal Motivated Methods Xuewen Shi, Heyan Huang, Ping Jian, Yi-Kun Tang. ACM Transactions on Asian and Low-Resource Language Information Processing. 2023 Neural Variational Gaussian Mixture Topic Model Yi-Kun Tang, Heyan Huang, Xuewen Shi, Xian-Ling Mao.">
+    <meta name="description" content="Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. The Web Conference (WWW). 2024 Dependency-Aware Neural Topic Model Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. Information Processing &amp; Management. 2024 基于词频效应控制的神经机器翻译用词多样性增强方法 史学文, 鉴萍, 唐翼琨, 黄河燕. 第22届中国计算语言学大会 (CCL 2023). 2023 Approximating to the Real Translation Quality for Neural Machine Translation via Causal Motivated Methods Xuewen Shi, Heyan Huang, Ping Jian, Yi-Kun Tang.">
   
 
   <link rel="apple-touch-icon" sizes="180x180" href="https://example.com/apple-touch-icon.png">
@@ -275,6 +275,10 @@ Hugo is the **world’s fastest framework for building websites**. It is written
 
 It makes use of a variety of open source projects including: -->
 <ol>
+<li><a href="" target="_blank">Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling</a><br/>
+<small><small>
+Heyan Huang, Yi-Kun Tang, <strong>Xuewen Shi</strong>, Xian-Ling Mao. <em>The Web Conference (WWW)</em>. 2024
+</small></small></li>
 <li><a href="https://www.sciencedirect.com/science/article/pii/S0306457323002674" target="_blank">Dependency-Aware Neural Topic Model</a><br/>
 <small><small>
 Heyan Huang, Yi-Kun Tang, <strong>Xuewen Shi</strong>, Xian-Ling Mao. <em>Information Processing &amp; Management</em>. 2024
