--- a/publications/index.html
+++ b/publications/index.html
@@ -275,7 +275,7 @@ Hugo is the **world’s fastest framework for building websites**. It is written
 
 It makes use of a variety of open source projects including: -->
 <ol>
-<li><a href="" target="_blank">Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling</a><br/>
+<li><a href="https://dl.acm.org/doi/abs/10.1145/3589334.3645715" target="_blank">Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling</a><br/>
 <small><small>
 Yi-Kun Tang, Heyan Huang, <strong>Xuewen Shi</strong>, Xian-Ling Mao. <em>The Web Conference (WWW)</em>. 2024
 </small></small></li>
