--- a/publications/index.html
+++ b/publications/index.html
@@ -10,7 +10,7 @@
 
   
     
-    <meta name="description" content="Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling Yi-Kun Tang, Heyan Huang, Xuewen Shi, Xian-Ling Mao. The Web Conference (WWW). 2024 Dependency-Aware Neural Topic Model Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. Information Processing &amp; Management. 2024 Improving Word-level Diversity in Neural Machine Translation by Controlling the Effects of Word Frequency Xuewen Shi, Ping Jian, Yi-Kun Tang, Heyan Huang. Proceedings of the 22nd Chinese National Conference on Computational Linguistics.">
+    <meta name="description" content="Modeling Logical Content and Pattern Information for Contextual Reasoning Peiqi Guo, Ping Jian, Xuewen Shi, IJCNN. 2024 Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling Yi-Kun Tang, Heyan Huang, Xuewen Shi, Xian-Ling Mao. The Web Conference (WWW). 2024 Dependency-Aware Neural Topic Model Heyan Huang, Yi-Kun Tang, Xuewen Shi, Xian-Ling Mao. Information Processing &amp; Management. 2024 Improving Word-level Diversity in Neural Machine Translation by Controlling the Effects of Word Frequency Xuewen Shi, Ping Jian, Yi-Kun Tang, Heyan Huang.">
   
 
   <link rel="apple-touch-icon" sizes="180x180" href="https://example.com/apple-touch-icon.png">
@@ -275,6 +275,10 @@ Hugo is the **world’s fastest framework for building websites**. It is written
 
 It makes use of a variety of open source projects including: -->
 <ol>
+<li><a href="https://ieeexplore.ieee.org/document/10650051" target="_blank">Modeling Logical Content and Pattern Information for Contextual Reasoning</a><br/>
+<small><small>
+Peiqi Guo, Ping Jian, <strong>Xuewen Shi</strong>, <em>IJCNN</em>. 2024
+</small></small></li>
 <li><a href="https://dl.acm.org/doi/abs/10.1145/3589334.3645715" target="_blank">Beyond Labels and Topics: Discovering Causal Relationships in Neural Topic Modeling</a><br/>
 <small><small>
 Yi-Kun Tang, Heyan Huang, <strong>Xuewen Shi</strong>, Xian-Ling Mao. <em>The Web Conference (WWW)</em>. 2024
